--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -60,11 +60,21 @@ body{
     transition: background-color .75s;
 }
 a{
+    color: inherit;
     text-decoration: none !important;
+}
+a:visited,
+a:hover,
+a:active{
+    color: $color-accent;
 }
 ul,ol{
     list-style-type: none;
 }
+img{
+    border-style: none;
+}
+
 .mini-title{
     font-size: $doc-font-size !important;
     font-weight: 700;
@@ -73,3 +83,176 @@ ul,ol{
     position: relative;
     z-index: 300;
 }
+#site-content{
+    display: block;
+}
+.inner-site-container{
+    @include border( 1px, solid, #{$background-border-decor-string}, -top );
+}
+.module-row{
+    max-width: 1600px;
+    margin: auto;
+    @include text-color(#{$color-typo-string});
+}
+.main-page-area{
+    flex-grow: 1;
+    overflow: hidden;
+    @media #{$md-scn--up} {
+        max-width: 720px;
+        @include border( 1px, solid, #{$background-border-decor-string}, -right );
+        @include border( 1px, solid, #{$background-border-decor-string}, -left );
+        margin: 0 auto;
+    }
+    @media #{$lg-scn--up}{
+        max-width: none;
+        margin: unset;
+    }
+}
+.main-page-header{
+    padding: 40px 20px 0;
+    @media #{$md-scn--up}{
+        padding: 40px 50px 0;
+    }
+}
+.img-module--container{
+    margin: -40px -20px -40px;
+    @media #{$md-scn--up}{
+        padding: 0px 0 40px;
+    }
+    .artdirection{
+        padding-bottom: 100%;
+        @media #{$md-scn--up}{
+            padding-bottom: 66.6666666667%;
+        }
+    }
+    .img-banner{
+        position: relative;
+        display: block;
+
+        .module--image-box{
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+.banner-img-caption{
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: .5rem;
+    text-align: right;
+    margin-right: 4px;
+
+    @media #{$md-scn--up}{
+        text-align: left;
+        transform: translateX(100%) rotate(-90deg);
+        transform-origin: 0 0;
+        margin-right: 0;
+    }
+}
+// .title{
+//     margin-top: 2.2em;
+//     // margin-left: -.55em;
+//     font-size: 26px;
+//     @media #{$md-scn--up}{
+//         margin-top: .5em;
+//     }
+// }
+// .font-style{
+//     font-weight: 800;
+//     line-height: 1.5;
+// }
+// .latest-page{
+//     display: none;
+//     @media #{$lg-scn--up}{
+//         display: block;
+//         position: sticky;
+//         top: 0;
+//         height: 100vh;
+//         overflow-y: scroll;
+//         max-width: 400px;
+//         // background: blue;
+//         // height: 100%;
+//         width: 100%;
+//     }
+// }
+// .section-padding{
+//     padding: 40px 10px 0;
+//     @media #{$md-scn--up}{
+//         padding: 40px 50px 0;
+//     }
+// }
+// .section-padding:first-of-type{
+//     padding-top: 10px;
+// }
+// #section:nth-of-type(2n){
+//     @include bg-color(#{$background-3-string})
+// }
+
+
+
+// .section-padding{
+//     padding: 40px 20px 0;
+//     @media #{$md-scn--up}{
+//         padding: 40px 50px 0;
+//     }
+
+//     & .inner-section-padding{
+//         padding-bottom: 40px;
+//         margin-bottom: 40px;
+//         @include border( 1px, solid, #{$background-border-decor-string}, -bottom );
+
+//         & .post-module-content{
+//             display: flex;
+//             flex-flow: column;
+//             justify-content: space-between;
+//             color: inherit;
+//             font-size: 18px;
+//             font-weight: 500;
+//             line-height: 1.3;
+//             figure{
+//                 // order: 2;
+//                 width: 100%;
+//                 margin: 0 0 15px;
+//                 display: block;
+//                 picture {
+//                     position: relative;
+//                     display: block;
+                    
+//                     & .img-thumbnail{
+//                         position: absolute;
+//                         top: 0;
+//                         right: 0;
+//                         left: 0px;
+//                         bottom: 0;
+//                         width: 100%;
+//                         height: 100%;
+//                     }
+
+//                     img{
+//                         border: none;
+//                     }
+//                 }
+//                 .artdirection--123{
+//                     padding-bottom: 56.497175141242934%;
+//                 }
+//             }
+            
+//             & .post-module--title{
+//                 margin: unset;
+//                 // margin-left: 1em;
+//                 margin-top: .75em;
+//                 order: -1;
+//             } 
+
+//             & .post-module--excerpt{
+//                 // margin-left: 1em;
+//             }
+//         }
+//     }
+// }
