--- a/_sass/switchButton.scss
+++ b/_sass/switchButton.scss
@@ -1,6 +1,7 @@
 .switch-button{
     position: relative;
     margin-top: 3px;
+    // padding: 0 1em;
 
     & input[type="checkbox"]{
         position: relative;
