--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -89,8 +89,10 @@ layout: compress
                             </li>
                             <li class="top-nav-list-item logo pos-rel">
                                 <a href="" aria-label="NP Home" class="nav-link logo">
-                                
-                                    <svg class="logo-cell" xmlns="http://www.w3.org/2000/svg" width="484.023" height="38.242" viewBox="0 0 484.023 68.242">
+                                    <svg class="logo-cell logo--small" xmlns="http://www.w3.org/2000/svg" width="127.861" height="25.829" viewBox="0 0 127.861 25.829">
+                                        <path class="logo-path" id="Path_86" data-name="Path 86" d="M-229.346-53.806v20.181h-3.127L-238.354-46.4v12.774h-1.372V-53.806h2.59l6.418,13.794V-53.806Zm15.324,5.278-3.416,14.9h-2.394l-1.414-7.555-1.4,7.555h-2.384l-3.416-14.9h3.932l1.837,8.752,1.486-8.752h2.435l1.589,8.752,1.919-8.752Zm11.3,14.371a5.529,5.529,0,0,1-2.693.769,2.2,2.2,0,0,1-2.394-1.73,2.936,2.936,0,0,1-2.7,1.8q-3.292,0-3.292-4.376a4.736,4.736,0,0,1,3.013-4.672q2.765-1.242,2.765-2.986,0-2.292-1.589-2.292-1.837,0-1.837,2.218a7.853,7.853,0,0,0,.289,1.833l-1.868-.517a12.625,12.625,0,0,1-.072-1.3q0-3.548,4.52-3.548,4.293,0,4.293,3.312V-36.6q0,1.39.629,1.39a1.12,1.12,0,0,0,.578-.31Zm-5.335-8.427a3.789,3.789,0,0,1-.815.961,4.067,4.067,0,0,0-1.166,3.282q0,2.957.8,2.957,1.176,0,1.176-2.927Zm15.86,8.959h-3.766V-44.566q0-1.671-.65-1.671t-1.145,1.323a9.088,9.088,0,0,0-.485,3.127v8.161h-3.766V-48.557a18.943,18.943,0,0,0,3.766-.37v2.794q1.4-2.779,3.426-2.779,2.621,0,2.621,3.814ZM-183.3-48.38a5.174,5.174,0,0,1,2.631,4.687,4.926,4.926,0,0,1-1.321,3.46,4.18,4.18,0,0,1-3.189,1.434,9.759,9.759,0,0,1-1.95-.266,1.613,1.613,0,0,0-.712,1.183q0,.813.877.813.227,0,.918-.059,1.744-.163,2.538-.163,3.756,0,3.756,4.081,0,4.938-6.222,4.938-4.633,0-4.633-2.794a2.234,2.234,0,0,1,1.878-2.188,2.612,2.612,0,0,1-2-2.5,4.683,4.683,0,0,1,2.384-3.829,4.374,4.374,0,0,1-2.095-4.125,5.56,5.56,0,0,1,1.269-3.718,3.962,3.962,0,0,1,3.147-1.5,9.73,9.73,0,0,1,1.682.192q-.052-.517-.052-.813,0-2.927,2.136-2.927,1.7,0,1.7,2.055,0,1.567-1.022,1.567a1.482,1.482,0,0,1-.8-.325,1.084,1.084,0,0,0-.433-.222Q-183.3-49.444-183.3-48.38Zm-2.322.917q-1.053,0-1.053,3.755,0,3.445,1.094,3.445,1,0,1-3.06Q-184.583-47.463-185.625-47.463Zm-.1,14.814q-2.631,0-2.631,1.464t2.549,1.449q2.962,0,2.962-1.626Q-182.849-32.649-185.728-32.649Zm14.415-6.431,1.517.636q-.237,5.16-4.251,5.16-5.2,0-5.2-7.437a11.366,11.366,0,0,1,1.383-5.914,4.067,4.067,0,0,1,3.539-2.306q4.509,0,4.509,8.338h-5.49q0,5.855,2.074,5.855,1.94,0,1.94-3.312Q-171.292-38.5-171.313-39.08Zm-4-3.193h2.249q0-5.2-1.094-5.2-.991,0-1.114,3.859ZM-164.471-54.1v20.477h-3.766V-53.806A29.059,29.059,0,0,0-164.471-54.1Zm9.514,15.021,1.517.636q-.237,5.16-4.251,5.16-5.2,0-5.2-7.437a11.366,11.366,0,0,1,1.383-5.914,4.067,4.067,0,0,1,3.539-2.306q4.509,0,4.509,8.338h-5.49q0,5.855,2.074,5.855,1.94,0,1.94-3.312Q-154.937-38.5-154.957-39.08Zm-4-3.193h2.25q0-5.2-1.094-5.2-.991,0-1.114,3.859Zm7.285,8.649V-53.806h6.078q5.17,0,5.17,5.929,0,5.988-5.748,5.988h-1.414v8.265Zm4.086-10.127h.918q2.229,0,2.229-4.228,0-3.962-2.229-3.962h-.918Zm13.043-5.16q5.159,0,5.159,7.806t-5.159,7.806q-5.17,0-5.17-7.806T-134.547-48.912Zm-.01,1.316q-1.249,0-1.249,6.49t1.249,6.49q1.259,0,1.259-6.49T-134.557-47.6Zm14.88,2.9-1.826.458q0-3.341-2.167-3.341-1.331,0-1.331,1.567,0,1.153,2.291,2.484,3.508,2.055,3.508,5.219,0,5.042-4.468,5.042-4.726,0-4.726-5.042l1.94-.562q-.041.488-.041.917a3.543,3.543,0,0,0,.758,2.262,2.232,2.232,0,0,0,1.79.961q1.362,0,1.362-1.656,0-1.109-2.2-2.454-3.312-2.04-3.312-5.234a4.864,4.864,0,0,1,1.269-3.467,4.272,4.272,0,0,1,3.261-1.353Q-120.028-48.9-119.677-44.7Zm7.584-3.785v1.671h-1.672v10.541q0,.991.444.991.32,0,.382-.665l1.073.148a2.594,2.594,0,0,1-2.827,2.336q-2.838,0-2.838-3.46v-9.891h-1.259v-1.671h1.259v-2.632a14.674,14.674,0,0,0,3.766-2.218v4.849Z" transform="translate(239.727 54.102)" fill="#707070"/>
+                                    </svg>                             
+                                    <svg class="logo-cell logo--lg" xmlns="http://www.w3.org/2000/svg" width="484.023" height="38.242" viewBox="0 0 484.023 68.242">
                                         <path class="logo-path" id="Path_86" data-name="Path 86" d="M-200.43-53.32V0h-11.836l-22.266-33.75V0h-5.2V-53.32h9.8l24.3,36.445V-53.32Zm58.008,13.945L-155.352,0h-9.062l-5.352-19.961L-175.078,0H-184.1l-12.93-39.375h14.883L-175.2-16.25l5.625-23.125h9.219l6.016,23.125,7.266-23.125ZM-99.648-1.406a28.087,28.087,0,0,1-10.2,2.031q-7.344,0-9.062-4.57Q-122.461.82-129.141.82-141.6.82-141.6-10.742q0-8.789,11.406-12.344,10.469-3.281,10.469-7.891,0-6.055-6.016-6.055-6.953,0-6.953,5.859a15.053,15.053,0,0,0,1.094,4.844l-7.07-1.367a23.408,23.408,0,0,1-.273-3.437q0-9.375,17.109-9.375,16.25,0,16.25,8.75V-7.852q0,3.672,2.383,3.672A5.092,5.092,0,0,0-101.016-5Zm-20.2-22.266a12.088,12.088,0,0,1-3.086,2.539q-4.414,2.578-4.414,8.672,0,7.813,3.047,7.813,4.453,0,4.453-7.734ZM-59.8,0H-74.062V-28.906q0-4.414-2.461-4.414-2.5,0-4.336,3.5A17.538,17.538,0,0,0-82.7-21.562V0H-96.953V-39.453A101.858,101.858,0,0,0-82.7-40.43v7.383q5.312-7.344,12.969-7.344,9.922,0,9.922,10.078Zm33.672-38.984q9.961,4.258,9.961,12.383,0,5.352-5,9.141a19.4,19.4,0,0,1-12.07,3.789,52.169,52.169,0,0,1-7.383-.7q-2.7,1.563-2.7,3.125Q-43.32-9.1-40-9.1q.859,0,3.477-.156,6.6-.43,9.609-.43Q-12.7-9.687-12.7,1.094q0,13.047-23.555,13.047-17.539,0-17.539-7.383,0-4.258,7.109-5.781-7.578-1.992-7.578-6.6,0-5.742,9.023-10.117-7.93-3.2-7.93-10.9a12.255,12.255,0,0,1,4.8-9.824A18.1,18.1,0,0,1-36.445-40.43a52.234,52.234,0,0,1,6.367.508,16.148,16.148,0,0,1-.2-2.148q0-7.734,8.086-7.734,6.445,0,6.445,5.43,0,4.141-3.867,4.141a7.166,7.166,0,0,1-3.047-.859A5,5,0,0,0-24.3-41.68Q-26.133-41.8-26.133-38.984Zm-8.789,2.422q-3.984,0-3.984,9.922,0,9.1,4.141,9.1,3.789,0,3.789-8.086Q-30.977-36.562-34.922-36.562Zm-.391,39.141q-9.961,0-9.961,3.867,0,3.828,9.648,3.828,11.211,0,11.211-4.3Q-24.414,2.578-35.312,2.578Zm54.57-16.992L25-12.734Q24.1.9,8.906.9-10.781.9-10.781-18.75q0-9.531,5.234-15.625a16.869,16.869,0,0,1,13.4-6.094q17.07,0,17.07,22.031H4.141q0,15.469,7.852,15.469,7.344,0,7.344-8.75Q19.336-12.891,19.258-14.414ZM4.1-22.852h8.516q0-13.75-4.141-13.75-3.75,0-4.219,10.2ZM45.156-54.1V0H30.9V-53.32Q36.8-53.32,45.156-54.1ZM81.172-14.414l5.742,1.68Q86.016.9,70.82.9,51.133.9,51.133-18.75q0-9.531,5.234-15.625a16.869,16.869,0,0,1,13.4-6.094q17.07,0,17.07,22.031H66.055q0,15.469,7.852,15.469,7.344,0,7.344-8.75Q81.25-12.891,81.172-14.414ZM66.016-22.852h8.516q0-13.75-4.141-13.75-3.75,0-4.219,10.2ZM93.594,0V-53.32H116.6q19.57,0,19.57,15.664,0,15.82-21.758,15.82h-5.352V0Zm15.469-26.758h3.477q8.438,0,8.438-11.172,0-10.469-8.437-10.469h-3.477Zm49.375-13.633q19.531,0,19.531,20.625T158.438.859q-19.57,0-19.57-20.625T158.438-40.391Zm-.039,3.477q-4.727,0-4.727,17.148T158.4-2.617q4.766,0,4.766-17.148T158.4-36.914Zm56.328,7.656-6.914,1.211q0-8.828-8.2-8.828-5.039,0-5.039,4.141,0,3.047,8.672,6.563,13.281,5.43,13.281,13.789,0,13.32-16.914,13.32-17.891,0-17.891-13.32l7.344-1.484a20.183,20.183,0,0,0-.156,2.422,7.749,7.749,0,0,0,2.871,5.977,9.9,9.9,0,0,0,6.777,2.539q5.156,0,5.156-4.375,0-2.93-8.32-6.484-12.539-5.391-12.539-13.828a10.953,10.953,0,0,1,4.8-9.16q4.8-3.574,12.344-3.574Q213.4-40.352,214.727-29.258Zm28.711-10v4.414h-6.328V-6.992q0,2.617,1.68,2.617,1.211,0,1.445-1.758l4.063.391Q242.617.43,233.594.43q-10.742,0-10.742-9.141V-34.844h-4.766v-4.414h4.766v-6.953a64.276,64.276,0,0,0,14.258-5.859v12.813Z" transform="translate(239.727 54.102)" fill="#707070"/>
                                     </svg>
                                 </a>
@@ -150,12 +152,12 @@ layout: compress
             </nav>            
         </header>
 
-        <!-- <main id="site-content">
+        <main id="site-content">
             <div class="homepage">
                 <div class="inner-site-container container">
                     <div class="row module-row">
                         <div class="main-page-area _82ef4">
-                            <section id="section" class="section-padding main-page-header">
+                            <div id="section" class="section-padding main-page-header">
                                 <figure class="img-module--container">
                                     <picture class="img img-banner artdirection">
                                         <source media="(max-width: 26.524em)" srcset="">
@@ -166,27 +168,76 @@ layout: compress
                                     </figcaption>
                                 </figure>
                                 <h1 class="title">Good Morning Folks!</h1>                                
-                            </section> -->
-                            <!-- <section id="section" class="main-page-posts section-padding">
+                            </div>
+                            <section id="section" class="main-page-posts section-padding">
                                 <ul class="main-page-posts-lists section-padding">
                                     <li class="post-module inner-section-padding">
                                         <a href="#" class="post-module-content">
                                             <figure>
                                                 <picture class="artdirection--123">
-                                                  <img src="../assets/images/img-1a.jpg" alt="a white man passport" class="img img-thumbnail sm-img-module">  
+                                                  <img src="../assets/images/img-3a.jpg" alt="a white man passport" class="img img-thumbnail sm-img-module">  
                                                 </picture>
                                             </figure>
                                             
                                             <h4 class="title post-module--title"> <strong>The tragedy how the great Isu Kingdom was divided</strong></h4>
                                             <div class="post-module--excerpt">
-                                                <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur.</p>
-                                                <p class="source"><span>Pulse Naija</span></p>
+                                                <p class="para-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur.</p>
+                                                <p class="para-source"><span>Pulse Naija<svg class="external-link" aria-label="external link" width="8" height="8" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M11.25 8.25a.75.75 0 0 0-.75.75v1.5h-9v-9H3A.75.75 0 0 0 3 0H1.5A1.504 1.504 0 0 0 0 1.5v9A1.504 1.504 0 0 0 1.5 12h9a1.504 1.504 0 0 0 1.5-1.5V9a.75.75 0 0 0-.75-.75zm.745-7.527a.766.766 0 0 0-.052-.26c0-.007-.008-.012-.011-.018a.728.728 0 0 0-.348-.356.75.75 0 0 0-.335-.09L7.501.001a.75.75 0 0 0 0 1.5h1.94L3.97 6.97a.75.75 0 1 0 1.06 1.06l5.47-5.47V4.5a.75.75 0 1 0 1.5 0V.75c0-.01-.005-.018-.005-.027z" fill-rule="evenodd" fill="var(--color,#000)"></path></svg></span></p>
                                             </div>
+                                        </a>
+                                    </li>
+                                    <li class="post-module inner-section-padding">
+                                        <a href="#" class="post-module-content">
+                                            <figure>
+                                                <picture class="artdirection--123">
+                                                  <img src="../assets/images/img-5a.jpg" alt="a white man passport" class="img img-thumbnail sm-img-module">  
+                                                </picture>
+                                            </figure>
                                             
+                                            <h4 class="title post-module--title"> <strong>The tragedy how the great Isu Kingdom was divided</strong></h4>
+                                            <div class="post-module--excerpt">
+                                                <p class="para-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur.</p>
+                                                <p class="para-source"><span>Pulse Naija<svg class="external-link" aria-label="external link" width="8" height="8" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M11.25 8.25a.75.75 0 0 0-.75.75v1.5h-9v-9H3A.75.75 0 0 0 3 0H1.5A1.504 1.504 0 0 0 0 1.5v9A1.504 1.504 0 0 0 1.5 12h9a1.504 1.504 0 0 0 1.5-1.5V9a.75.75 0 0 0-.75-.75zm.745-7.527a.766.766 0 0 0-.052-.26c0-.007-.008-.012-.011-.018a.728.728 0 0 0-.348-.356.75.75 0 0 0-.335-.09L7.501.001a.75.75 0 0 0 0 1.5h1.94L3.97 6.97a.75.75 0 1 0 1.06 1.06l5.47-5.47V4.5a.75.75 0 1 0 1.5 0V.75c0-.01-.005-.018-.005-.027z" fill-rule="evenodd" fill="var(--color,#000)"></path></svg></span></p>
+                                            </div>
                                         </a>
                                     </li>
                                 </ul>
-                            </section> -->
+                            </section>
+                            <section id="section" class="main-page-posts section-padding">
+                                <h3 class="section-title">How Igbos are coping with coronavirus</h3>
+                                <ul class="main-page-posts-lists section-padding">
+                                    <li class="post-module inner-section-padding">
+                                        <a href="#" class="post-module-content">
+                                            <figure>
+                                                <picture class="artdirection--123">
+                                                  <img src="../assets/images/img-3a.jpg" alt="a white man passport" class="img img-thumbnail sm-img-module">  
+                                                </picture>
+                                            </figure>
+                                            
+                                            <h4 class="title post-module--title"> <strong>The tragedy how the great Isu Kingdom was divided</strong></h4>
+                                            <div class="post-module--excerpt">
+                                                <p class="para-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur.</p>
+                                                <p class="para-source"><span>Pulse Naija<svg class="external-link" aria-label="external link" width="8" height="8" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M11.25 8.25a.75.75 0 0 0-.75.75v1.5h-9v-9H3A.75.75 0 0 0 3 0H1.5A1.504 1.504 0 0 0 0 1.5v9A1.504 1.504 0 0 0 1.5 12h9a1.504 1.504 0 0 0 1.5-1.5V9a.75.75 0 0 0-.75-.75zm.745-7.527a.766.766 0 0 0-.052-.26c0-.007-.008-.012-.011-.018a.728.728 0 0 0-.348-.356.75.75 0 0 0-.335-.09L7.501.001a.75.75 0 0 0 0 1.5h1.94L3.97 6.97a.75.75 0 1 0 1.06 1.06l5.47-5.47V4.5a.75.75 0 1 0 1.5 0V.75c0-.01-.005-.018-.005-.027z" fill-rule="evenodd" fill="var(--color,#000)"></path></svg></span></p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="post-module inner-section-padding">
+                                        <a href="#" class="post-module-content">
+                                            <figure>
+                                                <picture class="artdirection--123">
+                                                  <img src="../assets/images/img-5a.jpg" alt="a white man passport" class="img img-thumbnail sm-img-module">  
+                                                </picture>
+                                            </figure>
+                                            
+                                            <h4 class="title post-module--title"> <strong>The tragedy how the great Isu Kingdom was divided</strong></h4>
+                                            <div class="post-module--excerpt">
+                                                <p class="para-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur.</p>
+                                                <p class="para-source"><span>Pulse Naija<svg class="external-link" aria-label="external link" width="8" height="8" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M11.25 8.25a.75.75 0 0 0-.75.75v1.5h-9v-9H3A.75.75 0 0 0 3 0H1.5A1.504 1.504 0 0 0 0 1.5v9A1.504 1.504 0 0 0 1.5 12h9a1.504 1.504 0 0 0 1.5-1.5V9a.75.75 0 0 0-.75-.75zm.745-7.527a.766.766 0 0 0-.052-.26c0-.007-.008-.012-.011-.018a.728.728 0 0 0-.348-.356.75.75 0 0 0-.335-.09L7.501.001a.75.75 0 0 0 0 1.5h1.94L3.97 6.97a.75.75 0 1 0 1.06 1.06l5.47-5.47V4.5a.75.75 0 1 0 1.5 0V.75c0-.01-.005-.018-.005-.027z" fill-rule="evenodd" fill="var(--color,#000)"></path></svg></span></p>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </section>
                         </div>
                         <!-- <div class="latest-page">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatibus magnam dicta, doloremque saepe exercitationem? Sed veniam alias consectetur rerum quae voluptatibus et, excepturi unde quo dolor animi necessitatibus officiis, autem accusamus perferendis explicabo quos facilis, adipisci voluptate quidem? Ex deserunt perspiciatis praesentium molestias deleniti error tempore aliquam repellendus sapiente, pariatur distinctio, consectetur natus sunt tempora dolorem enim officia maxime! Saepe illum possimus ducimus laudantium dolorem! Illum, saepe architecto veritatis vel minus maxime libero enim reprehenderit neque porro dolorem cumque exercitationem quaerat, quis sequi sit ut, placeat facilis? Ab earum placeat reprehenderit! Temporibus quaerat dicta deserunt iste sunt tempora ab!</p>
