--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -2,7 +2,8 @@ header{
     border-bottom: 1px solid $background-border-decor--lite;
     @include border(1px, solid, #{$background-border-decor-string}, -bottom);
     // overflow: hidden;
-    position: relative;
+    position: fixed;
+    width: 100%;
     height: 4em;
     background: $background-nav--lite;
     @include bg-color(#{$background-nav-string});
@@ -10,6 +11,7 @@ header{
     transition: background-color .75s;
     z-index: 199;
     @media #{$lg-scn} {
+        position: relative;
         padding-top: .1em;
         height: 8em;
     }
@@ -45,6 +47,29 @@ header{
     }
 }
 
+.logo{
+    position: absolute;
+    left: 47%;
+    top: 50%;
+    transform: translate(-49%, -50%);
+    z-index: 400;
+
+    @media #{$lg-scn}{
+        all: unset;
+    }
+}
+.logo--small{
+    // display: block;
+    @media #{lg-scn}{
+        display: none;
+    }
+}
+.logo--lg{
+    display: none;
+    @media #{$lg-scn}{
+        display: block;
+    }
+}
 .logo-cell{
     width: 284.023px !important;
     height: 25.242px !important;
@@ -57,7 +82,13 @@ header{
         // font-size: 2rem !important;
     }    
 }
-
+.logo-cell.logo--small{
+    width: unset !important;
+    height: unset !important;
+    @media #{$lg-scn}{
+        display: none;
+    }
+}
 .menulist{
     display: none;
     @media #{$lg-scn} {
