modules futher progress

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -204,7 +204,7 @@ layout: compress
                                 </ul>
                             </section>
                             <section id="section" class="main-page-posts section-padding">
-                                <h3 class="section-title">How Igbos are coping with coronavirus</h3>
+                                <h3 class="section-title">How Igbos are coping with coronavirus!</h3>
                                 <ul class="main-page-posts-lists section-padding">
                                     <li class="post-module inner-section-padding">
                                         <a href="#" class="post-module-content">
