--- a/_sass/news-module.scss
+++ b/_sass/news-module.scss
@@ -77,8 +77,14 @@
 }
 .section-title{
     line-height: 1.05;
-    font-size: 25px;
+    font-size: 22.5px;
     font-weight: 900;
     margin-bottom: 1em;
     margin-left: .5em;
+}
+
+.section-padding .postmodule:not(:first-of-type){
+    & .post-module--title{
+        display: none !important;
+    }
 }
