main-page-area responsive

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -170,78 +170,95 @@ layout: compress
                                 <h1 class="title">Good Morning Folks!</h1>                                
                             </div>
                             <section id="section" class="main-page-posts section-padding">
-                                <ul class="main-page-posts-lists section-padding">
+                                <ul class="main-page-posts-lists">
                                     <li class="post-module inner-section-padding">
                                         <a href="#" class="post-module-content">
                                             <figure>
                                                 <picture class="artdirection--123">
                                                   <img src="../assets/images/img-3a.jpg" alt="a white man passport" class="img img-thumbnail sm-img-module">  
                                                 </picture>
-                                            </figure>
-                                            
-                                            <h4 class="title post-module--title"> <strong>The tragedy how the great Isu Kingdom was divided</strong></h4>
-                                            <div class="post-module--excerpt">
-                                                <p class="para-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur.</p>
-                                                <p class="para-source"><span>Pulse Naija<svg class="external-link" aria-label="external link" width="8" height="8" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M11.25 8.25a.75.75 0 0 0-.75.75v1.5h-9v-9H3A.75.75 0 0 0 3 0H1.5A1.504 1.504 0 0 0 0 1.5v9A1.504 1.504 0 0 0 1.5 12h9a1.504 1.504 0 0 0 1.5-1.5V9a.75.75 0 0 0-.75-.75zm.745-7.527a.766.766 0 0 0-.052-.26c0-.007-.008-.012-.011-.018a.728.728 0 0 0-.348-.356.75.75 0 0 0-.335-.09L7.501.001a.75.75 0 0 0 0 1.5h1.94L3.97 6.97a.75.75 0 1 0 1.06 1.06l5.47-5.47V4.5a.75.75 0 1 0 1.5 0V.75c0-.01-.005-.018-.005-.027z" fill-rule="evenodd" fill="var(--color,#000)"></path></svg></span></p>
-                                            </div>
-                                        </a>
-                                    </li>
-                                    <li class="post-module inner-section-padding">
-                                        <a href="#" class="post-module-content">
-                                            <figure>
-                                                <picture class="artdirection--123">
-                                                  <img src="../assets/images/img-5a.jpg" alt="a white man passport" class="img img-thumbnail sm-img-module">  
-                                                </picture>
-                                            </figure>
-                                            
-                                            <h4 class="title post-module--title"> <strong>The tragedy how the great Isu Kingdom was divided</strong></h4>
-                                            <div class="post-module--excerpt">
-                                                <p class="para-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur.</p>
-                                                <p class="para-source"><span>Pulse Naija<svg class="external-link" aria-label="external link" width="8" height="8" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M11.25 8.25a.75.75 0 0 0-.75.75v1.5h-9v-9H3A.75.75 0 0 0 3 0H1.5A1.504 1.504 0 0 0 0 1.5v9A1.504 1.504 0 0 0 1.5 12h9a1.504 1.504 0 0 0 1.5-1.5V9a.75.75 0 0 0-.75-.75zm.745-7.527a.766.766 0 0 0-.052-.26c0-.007-.008-.012-.011-.018a.728.728 0 0 0-.348-.356.75.75 0 0 0-.335-.09L7.501.001a.75.75 0 0 0 0 1.5h1.94L3.97 6.97a.75.75 0 1 0 1.06 1.06l5.47-5.47V4.5a.75.75 0 1 0 1.5 0V.75c0-.01-.005-.018-.005-.027z" fill-rule="evenodd" fill="var(--color,#000)"></path></svg></span></p>
+                                            </figure>                                        
+                                            <div class="post-module-summary">
+                                                <h4 class="title post-module--title"> <strong>The tragedy how the great Isu Kingdom was divided</strong></h4>
+                                                <div class="post-module--excerpt">
+                                                    <p class="para-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur.</p>
+                                                    <p class="para-source"><span>Pulse Naija<svg class="external-link" aria-label="external link" width="8" height="8" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M11.25 8.25a.75.75 0 0 0-.75.75v1.5h-9v-9H3A.75.75 0 0 0 3 0H1.5A1.504 1.504 0 0 0 0 1.5v9A1.504 1.504 0 0 0 1.5 12h9a1.504 1.504 0 0 0 1.5-1.5V9a.75.75 0 0 0-.75-.75zm.745-7.527a.766.766 0 0 0-.052-.26c0-.007-.008-.012-.011-.018a.728.728 0 0 0-.348-.356.75.75 0 0 0-.335-.09L7.501.001a.75.75 0 0 0 0 1.5h1.94L3.97 6.97a.75.75 0 1 0 1.06 1.06l5.47-5.47V4.5a.75.75 0 1 0 1.5 0V.75c0-.01-.005-.018-.005-.027z" fill-rule="evenodd" fill="var(--color,#000)"></path></svg></span></p>
+                                                </div>                                                
                                             </div>
                                         </a>
                                     </li>
                                 </ul>
                             </section>
-                            <section id="section" class="main-page-posts section-padding">
-                                <h3 class="section-title">How Igbos are coping with coronavirus!</h3>
-                                <ul class="main-page-posts-lists section-padding">
+                            <section id="section" class="main-page-posts featured-post-padding">
+                                <h3 class="section-title">Featured Articles</h3>
+                                <ul class="main-page-posts-lists">
                                     <li class="post-module inner-section-padding">
-                                        <a href="#" class="post-module-content">
-                                            <figure>
-                                                <picture class="artdirection--123">
-                                                  <img src="../assets/images/img-3a.jpg" alt="a white man passport" class="img img-thumbnail sm-img-module">  
-                                                </picture>
-                                            </figure>
-                                            
-                                            <h4 class="title post-module--title"> <strong>The tragedy how the great Isu Kingdom was divided</strong></h4>
-                                            <div class="post-module--excerpt">
-                                                <p class="para-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur.</p>
-                                                <p class="para-source"><span>Pulse Naija<svg class="external-link" aria-label="external link" width="8" height="8" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M11.25 8.25a.75.75 0 0 0-.75.75v1.5h-9v-9H3A.75.75 0 0 0 3 0H1.5A1.504 1.504 0 0 0 0 1.5v9A1.504 1.504 0 0 0 1.5 12h9a1.504 1.504 0 0 0 1.5-1.5V9a.75.75 0 0 0-.75-.75zm.745-7.527a.766.766 0 0 0-.052-.26c0-.007-.008-.012-.011-.018a.728.728 0 0 0-.348-.356.75.75 0 0 0-.335-.09L7.501.001a.75.75 0 0 0 0 1.5h1.94L3.97 6.97a.75.75 0 1 0 1.06 1.06l5.47-5.47V4.5a.75.75 0 1 0 1.5 0V.75c0-.01-.005-.018-.005-.027z" fill-rule="evenodd" fill="var(--color,#000)"></path></svg></span></p>
+                                        <div class="featured-lists">
+                                            <div class="featured-item featured-card">
+                                                <div class="image module--visual">
+                                                    <a href="#">
+                                                        <!-- <figure>
+                                                            <picture class="artdirection--123"> -->
+                                                            <img src="../assets/images/img-4a.jpg" alt="a white man passport" class="img featured-image">  
+                                                            <!-- </picture>
+                                                        </figure> -->
+                                                    </a>     
+                                                </div>
+                                                <div class="fetured-details">
+                                                    <a href="" class="featured-title-link fetured-link">
+                                                        <h2 class="featured-title title">The Strokes Announce North American Concerts</h2>
+                                                    </a>
+                                                    <div class="featured-meta">
+                                                        <div class="featured--byline">
+                                                            <ul class="authors">
+                                                                <li><span class="display-name">by: Maddison Bloom</span></li>
+                                                            </ul>
+                                                        </div>
+                                                        <p class="cat-date">
+                                                            <a href="#" class="">
+                                                            Featured/History 
+                                                            </a>
+                                                        </p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                        </a>
-                                    </li>
-                                    <li class="post-module inner-section-padding">
-                                        <a href="#" class="post-module-content">
-                                            <figure>
-                                                <picture class="artdirection--123">
-                                                  <img src="../assets/images/img-5a.jpg" alt="a white man passport" class="img img-thumbnail sm-img-module">  
-                                                </picture>
-                                            </figure>
-                                            
-                                            <h4 class="title post-module--title"> <strong>The tragedy how the great Isu Kingdom was divided</strong></h4>
-                                            <div class="post-module--excerpt">
-                                                <p class="para-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sunt mollitia totam possimus dolore pariatur.</p>
-                                                <p class="para-source"><span>Pulse Naija<svg class="external-link" aria-label="external link" width="8" height="8" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M11.25 8.25a.75.75 0 0 0-.75.75v1.5h-9v-9H3A.75.75 0 0 0 3 0H1.5A1.504 1.504 0 0 0 0 1.5v9A1.504 1.504 0 0 0 1.5 12h9a1.504 1.504 0 0 0 1.5-1.5V9a.75.75 0 0 0-.75-.75zm.745-7.527a.766.766 0 0 0-.052-.26c0-.007-.008-.012-.011-.018a.728.728 0 0 0-.348-.356.75.75 0 0 0-.335-.09L7.501.001a.75.75 0 0 0 0 1.5h1.94L3.97 6.97a.75.75 0 1 0 1.06 1.06l5.47-5.47V4.5a.75.75 0 1 0 1.5 0V.75c0-.01-.005-.018-.005-.027z" fill-rule="evenodd" fill="var(--color,#000)"></path></svg></span></p>
+
+                                            <div class="featured-item featured-card">
+                                                <div class="image module--visual">
+                                                    <a href="#">
+                                                        <!-- <figure>
+                                                            <picture class="artdirection--123"> -->
+                                                            <img src="../assets/images/img-4a.jpg" alt="a white man passport" class="img featured-image">  
+                                                            <!-- </picture>
+                                                        </figure> -->
+                                                    </a>     
+                                                </div>
+                                                <div class="fetured-details">
+                                                    <a href="" class="featured-title-link fetured-link">
+                                                        <h2 class="featured-title title">The Strokes Announce North American Concerts</h2>
+                                                    </a>
+                                                    <div class="featured-meta">
+                                                        <div class="featured--byline">
+                                                            <ul class="authors">
+                                                                <li><span class="display-name">by: Maddison Bloom</span></li>
+                                                            </ul>
+                                                        </div>
+                                                        <p class="cat-date">
+                                                            <a href="#" class="">
+                                                            Featured/History 
+                                                            </a>
+                                                        </p>
+                                                    </div>
+                                                </div>
                                             </div>
-                                        </a>
+                                        </div>
                                     </li>
                                 </ul>
-                            </section>
+                            </section>                            
                         </div>
-                        <!-- <div class="latest-page">
+                        <div class="latest-page">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatibus magnam dicta, doloremque saepe exercitationem? Sed veniam alias consectetur rerum quae voluptatibus et, excepturi unde quo dolor animi necessitatibus officiis, autem accusamus perferendis explicabo quos facilis, adipisci voluptate quidem? Ex deserunt perspiciatis praesentium molestias deleniti error tempore aliquam repellendus sapiente, pariatur distinctio, consectetur natus sunt tempora dolorem enim officia maxime! Saepe illum possimus ducimus laudantium dolorem! Illum, saepe architecto veritatis vel minus maxime libero enim reprehenderit neque porro dolorem cumque exercitationem quaerat, quis sequi sit ut, placeat facilis? Ab earum placeat reprehenderit! Temporibus quaerat dicta deserunt iste sunt tempora ab!</p>
-                        </div> -->
+                        </div>                        
                     </div>
                 </div>
             </div>
