--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -45,6 +45,11 @@ $doc-font-size                  : 16px;
 $doc-font-size-lg               : 20px;
 $doc-line-height                : 6;
 
+$font-sm                        : 16px;
+$font-md                        : 24px;
+$fomt-lg                        : 38px;
+$fomt-wc                        : 46px;
+
 //media
 $small                          : "only screen and (max-width: 30em)";
 $medium                         : "only screen and (min-width: 30.1em) and (max-width: 48em)";
