--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -59,11 +59,19 @@ body{
     text-rendering: optimizeLegibility;
     transition: background-color .75s;
 }
+#main{
+    margin: 0 auto;
+    min-height: 100%;
+    padding-bottom: 0;
+    box-sizing: border-box;
+    @include text-color(#{$color-typo-string});
+}
 a{
     color: inherit;
     text-decoration: none !important;
+    transition: color 0.15s;
 }
-a:visited,
+
 a:hover,
 a:active{
     color: $color-accent;
@@ -90,6 +98,7 @@ img{
     @include border( 1px, solid, #{$background-border-decor-string}, -top );
 }
 .module-row{
+    flex-wrap: unset;
     max-width: 1600px;
     margin: auto;
     @include text-color(#{$color-typo-string});
@@ -98,7 +107,7 @@ img{
     flex-grow: 1;
     overflow: hidden;
     @media #{$md-scn--up} {
-        max-width: 720px;
+        max-width: 750px;
         @include border( 1px, solid, #{$background-border-decor-string}, -right );
         @include border( 1px, solid, #{$background-border-decor-string}, -left );
         margin: 0 auto;
@@ -117,7 +126,7 @@ img{
 .img-module--container{
     margin: -40px -20px -40px;
     @media #{$md-scn--up}{
-        padding: 0px 0 40px;
+        margin: 0px 0 40px;
     }
     .artdirection{
         padding-bottom: 100%;
@@ -170,31 +179,12 @@ img{
 .homepage .container{
     padding: unset;
 }
-.latest-page{
-    display: none;
-    @media #{$lg-scn--up}{
-        display: block;
-        position: sticky;
-        top: 0;
-        height: 100vh;
-        overflow-y: scroll;
-        max-width: 400px;
-        // background: blue;
-        // height: 100%;
-        width: 100%;
-    }
-}
-.section-padding{
-    padding: 40px 10px 0;
-    @media #{$md-scn--up}{
-        padding: 40px 50px 0;
-    }
-}
-.section-padding:first-of-type{
-    padding-top: 10px;
-}
 #section:nth-of-type(2n){
-    @include bg-color(#{$background-3-string})
+    @include bg-color(#{$background-3-string});
+
+    @media #{$md-scn--up}{
+        background: none;
+    }
 }
 
 
