--- a/_sass/news-module.scss
+++ b/_sass/news-module.scss
@@ -1,11 +1,11 @@
 .section-padding{
-    padding: 40px 20px 0;
+    padding: 40px 10px 0;
+    margin-bottom: 0;
     @media #{$md-scn--up}{
         padding: 40px 50px 0;
     }
-
     & .inner-section-padding{
-        padding-bottom: 20px;
+        padding-bottom: 40px;
         margin-bottom: 40px;
         @include border( 1px, solid, #{$background-border-decor-string}, -bottom );
 
@@ -18,11 +18,23 @@
             font-weight: 500;
             line-height: 1.3;
             font-family: Helvetica Neue, Helvetica, sans-serif;
+
+            @media #{$md-scn--up}{
+                flex-flow: row;
+                font-size: $font-md - 4px;
+            }
             figure{
                 // order: 2;
                 width: 100%;
                 margin: 0 0 15px;
                 display: block;
+
+                @media #{$md-scn--up}{
+                    margin-right: 20px;
+                    width: 220px;
+                    flex-shrink: 0;
+                    // order: 1;
+                }
                 picture {
                     position: relative;
                     display: block;
@@ -39,26 +51,46 @@
 
                     img{
                         border: none;
+                        border-style: none;
+                        object-fit: cover;
+                        // max-width: 100%;
                     }
                 }
                 .artdirection--123{
                     padding-bottom: 56.497175141242934%;
+                    @media #{$md-scn--up}{
+                        padding-bottom: 100%;
+                    }
+                    @media #{$lg-scn--up}{
+                        padding-bottom: 100%;
+                    }
                 }
             }
             
-            & .post-module--title{
-                margin: unset;
-                margin-bottom: .75em;
-                order: -1;
-                font-size: 20px;
-                line-height: 1.04;
-            } 
+            & .post-module-summary{
+                @media #{$lg-scn--up}{
+                    margin-top: .65em;
+                }
+                & .post-module--title{
+                    margin: unset;
+                    margin-bottom: .75em;
+                    order: -1;
+                    font-size: 20px;
+                    line-height: 1.04;
+                } 
 
-            & .post-module--excerpt{
-                // display: flex;
-                font-style: italic;
+                & .post-module--excerpt{
+                    // display: flex;
+                    font-style: italic;
+                }                
             }
+
         }
+    }
+
+    & .inner-section-padding:last-of-type{
+        margin-bottom: 0;
+        border: 0;
     }
 }
 .para-bold{
@@ -86,5 +118,105 @@
 .section-padding .postmodule:not(:first-of-type){
     & .post-module--title{
         display: none !important;
+    }
+}
+.featured-post-padding{
+    padding: 5em 1.5em;
+    padding-left: 1em;
+}
+.featured-lists{
+    display: flex;
+    // justify-content: space-between;
+    overflow-x: auto;
+    scroll-snap-type: mandatory;
+    margin: 15px -20px 0;
+    
+    .featured-item{
+        position: relative;
+        min-height: 1px;
+        // padding: 0 10px;
+        background: #fff;
+        width: 60%;
+        flex-shrink: 0;
+        scroll-snap-align: start;
+        margin-left: 1em;
+        
+        @media #{$md-scn--up}{
+            width: 50%;
+        }
+        @media #{$lg-scn--up}{
+            width: 50%;
+        }
+    }
+
+}
+
+.module--visual{
+    position: relative;
+
+    a{
+        display: block;
+    }
+}
+
+.featured-image{
+    position: relative;
+    z-index: 10;
+    border: none;
+    width: 100%;
+}
+.featured-details{
+    position: relative;
+    @media #{$md-scn--up}{
+        margin-top: 3em;
+    }
+}
+.featured-title-link{
+    display: block;
+    padding: 0 2.4rem;
+    color: #2b2b2b;
+    // margin: unset !important;
+   
+
+    .featured-title{
+        font-size: .73rem !important;
+        font-weight: 700;
+        text-align: center;
+        word-wrap: break-word;
+        line-height: 1.3;
+        // margin-top: 2em;
+
+        @media #{$md-scn--up}{
+            margin-top:3em;
+            font-size: 1.3rem  !important;
+        }
+    }
+}
+.featured-meta{
+    text-align: center;
+    padding: 0 1rem 3rem;
+    line-height: 1.5;
+}
+.featured--byline{
+    text-transform: uppercase;
+    font-size: .55rem;
+    letter-spacing: .075em;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 3em;
+
+    @media #{$md-scn--up}{
+        font-size: .85rem;
+    }
+}
+.cat-date a{
+    text-transform: uppercase;
+    font-size: .5rem;
+    letter-spacing: .075em;
+    font-weight: 600;
+    color: black;
+
+    @media #{$md-scn--up}{
+        font-size: .8rem;
     }
 }
