--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -25,7 +25,7 @@ $background-modal--lite         : rgba(249,249,249,0.98);
 $background-border-decor--lite  : rgba(0,0,0,0.15);
 $background-border-int--lite    : rgba(0,0,0,0.15);
 $color-typo--lite               : #0C0B0B;
-$color-typo-faint--lite         : #333333;
+$color-typo-faint--lite         : rgba(0,0,0,0.7);
 $background-nav--lite           : #f9f9f9;
 
 
