--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -56,6 +56,7 @@ body{
     color:  var(--clr-typo);
     line-height: 1.6;
     font-size: 16px;
+    font-family: "PTserif", Georgia, serif;
     text-rendering: optimizeLegibility;
     transition: background-color .75s;
 }
@@ -107,7 +108,7 @@ img{
     flex-grow: 1;
     overflow: hidden;
     @media #{$md-scn--up} {
-        max-width: 750px;
+        max-width: 850px;
         @include border( 1px, solid, #{$background-border-decor-string}, -right );
         @include border( 1px, solid, #{$background-border-decor-string}, -left );
         margin: 0 auto;
@@ -167,7 +168,7 @@ img{
 .title{
     margin-top: 2.2em;
     // margin-left: -.55em;
-    font-size: 26px;
+    @include font-size(40px);
     @media #{$md-scn--up}{
         margin-top: .5em;
     }
@@ -179,6 +180,10 @@ img{
 .homepage .container{
     padding: unset;
 }
+//  
+// .section-padding:first-of-type{
+//     // padding-top: 10px;
+// }
 #section:nth-of-type(2n){
     @include bg-color(#{$background-3-string});
 
@@ -189,3 +194,96 @@ img{
 
 
 
+
+
+.latest-page{
+    display: none;
+    @media #{$lg-scn--up}{
+        display: block;
+        position: sticky;
+        top: 0;
+        height: 100vh;
+        overflow-y: scroll;
+        max-width: 400px;
+        // background: blue;
+        // height: 100%;
+        width: 100%;
+        padding: 80px 50px 50px;
+    }    
+    & .latest-title{
+        font-weight: 700;
+        line-height: 1.05;
+        @include border( 1px, solid, #{$background-border-decor-string}, -bottom );
+    }
+    & h2{
+        font-size: 16px !important ;
+        margin-bottom: .5em;
+    }
+    & ul{
+        & li a{
+            @media #{$lg-scn--up}{
+               transition: none; 
+            }
+            &:hover{
+                opacity: .7;
+            }
+        }
+    }
+}
+.latest-module-content{
+    margin: 40px 0;
+}
+.bd-ovf{
+    border-radius: 8px;
+    overflow: hidden;
+}
+.latest-img{
+    margin-bottom: 1em;
+}
+.latest-img img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 1;
+    transition: opacity .3s;
+}
+
+.latest-module-detail{
+    margin: 8px 0;
+    line-height: 1.2;
+    font-size: 16px;
+}
+
+.latest-byline{
+    .author{
+        display: flex;
+        text-transform: uppercase;
+        @include font-size(15px);
+        font-size: 12px;
+        line-height: 1.2;
+        .cat{
+            margin-left: 5px;
+        }
+
+    }
+}        
+.site-name{
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 11px;
+}
+.mb-0{
+    margin-bottom: 0;
+}
+.mb-5{
+    margin-bottom: 3em;
+}
+// .container{
+//     @media #{$lg-scn--up}{
+//         max-width: 1300px;
+//     }
+// }qqq
