--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -167,8 +167,6 @@ img{
 }
 .title{
     margin-top: 2.2em;
-    // margin-left: -.55em;
-    @include font-size(40px);
     @media #{$md-scn--up}{
         margin-top: .5em;
     }
@@ -216,7 +214,7 @@ img{
         @include border( 1px, solid, #{$background-border-decor-string}, -bottom );
     }
     & h2{
-        font-size: 16px !important ;
+        font-size: 16px !important;
         margin-bottom: .5em;
     }
     & ul{
@@ -262,9 +260,11 @@ img{
     .author{
         display: flex;
         text-transform: uppercase;
-        @include font-size(15px);
-        font-size: 12px;
+        @include font-size(12px);
         line-height: 1.2;
+        & .author-name{
+          font-size: 12px;  
+        }
         .cat{
             margin-left: 5px;
         }
@@ -282,8 +282,48 @@ img{
 .mb-5{
     margin-bottom: 3em;
 }
-// .container{
-//     @media #{$lg-scn--up}{
-//         max-width: 1300px;
-//     }
-// }qqq
+.sr-only{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+}
+.svg:not(:root){
+    overflow: hidden;
+}
+// ::-webkit-scrollbar{
+//     background: white;
+//     // color: $color-accent;
+// }::-webkit-scrollbar-thumb{
+//     background-color: chartreuse;;
+// }
+// svg{
+//     
+// }
+
+path{
+    @include fill(#{$color-typo-string});
+}
+svg {
+    g{
+      @include fill(#{$color-typo-string});  
+    }    // path{
+    //     fill: none;
+    // }
+
+}
+#site-content > .homepage{
+    @media #{$lg-scn--up}{
+        position: relative;
+        z-index: 100;
+        margin-bottom: 67.9rem;
+        box-shadow: 0 0 20px rgba(0,0,0,0.25);
+        background-color: $background-1--lite;
+        @include bg-color(#{$background-1-string});
+    }
+
+}
