--- a/_sass/news-module.scss
+++ b/_sass/news-module.scss
@@ -5,7 +5,6 @@
         padding: 40px 50px 0;
     }
     h3{
-        font-size: 33px;
         margin-bottom: 1em;
     }
     & .inner-section-padding{
@@ -122,7 +121,6 @@
     font-size: 22.5px;
     font-weight: 900;
     margin-bottom: 1em;
-    margin-left: .5em;
 }
 
 .section-padding .postmodule:not(:first-of-type){
@@ -131,7 +129,7 @@
     }
 }
 .featured-post-padding{
-    padding: 5em 1.5em;
+    padding: 2em 1.5em .75em;
     padding-left: 1em;
 }
 .featured-lists{
