--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,6 @@
 <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
 
 <!-- CSS LINK -->
-<link rel="stylesheet" href="assets/css/main.css"> 
+<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css"> 
+
+
