--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -34,6 +34,13 @@
     margin: 0;
     padding: 0;
 }
+// @font-face {
+//     font-family: 'PTSans';
+//     font-style: normal;
+//     font-weight: normal;
+//     src: url('C:\Users\Andre\Documents\Workspace\2020 PROJECTS\DEV_BLOCK\Nwangele Post\site\assets\fonts\PT_Sans\PTSans-Bold.ttf');
+//     src: local('PTSans'), local('PTSans', url(../assets/fonts/PT_Sans/PTSans-Regular.ttf))
+// }
 *,
 *::before,
 *::after{
@@ -53,6 +60,8 @@ body{
     height: 100%;
     background-color: var(--clr-bg-1);
     font-family: Arial, Helvetica, sans-serif;
+    font-family: 'PTSans-Regular';
+    src: url(../assets/fonts/PT_Sans/PTSans-Regular.ttf);
     color:  var(--clr-typo);
     line-height: 1.6;
     font-size: 16px;
@@ -86,6 +95,9 @@ img{
 strong{
     line-height: 1.3;
 }
+.svg:not(:root){
+    overflow: hidden;
+}
 .mini-title{
     font-size: $doc-font-size !important;
     font-weight: 700;
@@ -93,6 +105,13 @@ strong{
 .pos-rel{
     position: relative;
     z-index: 300;
+}
+.div-wrapper{
+    height: 4em;
+
+    @media #{$lg-scn--up}{
+        height: 6em;
+    }
 }
 #site-content{
     display: block;
@@ -319,7 +338,7 @@ svg {
 
 }
 #site-content > .homepage{
-    @media #{$lg-scn--up}{
+    @media #{$md-scn--up}{
         position: relative;
         z-index: 100;
         margin-bottom: 67.9rem;
