--- a/_sass/mobile-nav.scss
+++ b/_sass/mobile-nav.scss
@@ -35,7 +35,7 @@
                     border: 0;
                     background: none;
                     width: 100%;
-                    height: .5rem;
+                    // height: .5rem;
                     display: flex;
                     flex-flow: column;
                     align-items: center;
