finished feature page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<header>
+<header id='header'>
     <nav class="navigation">
         <div class="nav-wrapper">
             <div class="nav-container-local nav-masthead">
