--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -15,6 +15,10 @@ header{
         padding-top: .1em;
         height: 6em;
     }
+
+    .hide{
+        transform: translateX(-100%);
+    }
 }
 .navigation{
     width: 100%;
