--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,4 +22,5 @@ sitemap: false
 @import 'mobile-nav';
 @import 'typography';
 @import 'pages/latest';
-@import 'pages/post'
+@import 'pages/post';
+@import 'pages/features';
