--- a/_layouts/latest.html
+++ b/_layouts/latest.html
@@ -13,7 +13,7 @@ title: Latest stories
        <div class="div-wrapper">
         {% include nav.html %}   
        </div>
-        <main id="site-content pt-sm">
+        <main id="site-content">
             <div class="homepage">
                 <div class="inner-site-container">
                     <div class="site-title">
@@ -108,7 +108,7 @@ title: Latest stories
             </div>
         </main>
 
-       <!-- {% include footer.html %} -->
+       {% include footer.html %}
    </div>
    {% include mobi-footer.html %}
    <script src="../assets/js/hamburger.js "></script>
