--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: compress
                             <figure class="post-article-figure">
                                 <div class="pos-rel post-article-img-container">
                                     <div class="post-article-img">
-                                        <img src="../assets/images/banner-1.png" alt="" srcset="">
+                                        <img src="{{ site.url }}/assets/images/banner-1.png" alt="" srcset="">
                                     </div>  
                                     <div class="img-credit">Reuters/Silva</div>                                  
                                 </div>
@@ -128,6 +128,6 @@ layout: compress
        {% include footer.html %}
    </div>
    {% include mobi-footer.html %}
-   <script src="../assets/js/hamburger.js "></script>
+   <script src="{{ site.url }}/assets/js/hamburger.js "></script>
 </body>
 </html>
