--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -51,7 +51,7 @@ html{
     min-height: 100%;
     height: 100%;
     box-sizing: border-box;
-    // overflow: hidden;
+    // overflow-x: hidden;
 }
 body{
     // all: unset;
@@ -348,3 +348,27 @@ svg {
     }
 
 }
+
+.hide{
+    transform: translateY(-100%);
+
+    transition: transform  .75s;
+}
+.show{
+    transform: translateY(0);
+
+    transition: transform  .5s;
+}
+
+.header-overlay{
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // background: black;
+    background-color: transparent;
+    background-image: linear-gradient(45deg,transparent,rgba(0,0,0,.2) 70%,rgba(0,0,0,.3));
+} 
+
