--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,3 +24,7 @@ sitemap: false
 @import 'pages/latest';
 @import 'pages/post';
 @import 'pages/features';
+@import 'pages/about';
+@import 'pages/single-gally';
+@import 'pages/video-gallery';
+@import 'modal';
